--- a/index.css
+++ b/index.css
@@ -1,3 +1,12 @@
 main {
   display: grid;
 }
+#action-box{
+  visibility: hidden;
+}
+#player-user {
+  visibility: hidden;
+}
+#select-text {
+  visibility: hidden;
+}
