--- a/index.css
+++ b/index.css
@@ -1,3 +1,28 @@
+header{
+  display: grid;
+  grid-template-columns: 1fr 3fr 1fr;
+  grid-template-rows: repeat(5,1fr);
+  width: 100vw;
+  height: 100vh;
+}
+#logo {
+  grid-column: 2;
+  grid-row: 2;
+  margin: auto;
+}
+#search-image{
+  grid-column: 2;
+  grid-row: 3;
+  margin: auto;
+}
+#search-bar{
+  grid-column: 2;
+  grid-row: 4;
+  margin: auto;
+}
+#player-search {
+  width: 300px;
+}
 main {
   display: grid;
 }
@@ -7,6 +32,9 @@ main {
 #player-user {
   visibility: hidden;
 }
+/* #player-user p{
+  visibility: hidden;
+} */
 #select-text {
   visibility: hidden;
 }
