--- a/index.css
+++ b/index.css
@@ -5,8 +5,9 @@ header{
   display: grid;
   grid-template-columns: 1fr 3fr 1fr;
   grid-template-rows: repeat(5,1fr);
-  width: 100vw;
-  height: 100vh;
+  width: 99vw;
+  height: 99vh;
+  background-color: lightcyan;
 }
 #logo {
   grid-column: 2;
@@ -30,12 +31,8 @@ main {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   grid-template-rows: repeat(4,1fr);
-  grid-template-areas:  "A B C D E"
-                        "F G H I J"
-                        "K L M N O"
-                        "P Q R S T";
-  width: 100vw;
-  height: 100vh;
+  width: 99vw;
+  height: 99vh;
 }
 #action-box{
   grid-column: 2 / 5;
@@ -44,14 +41,18 @@ main {
   text-align: center;
 }
 #player-user {
+  display: flex;
+  flex-direction: row-reverse;
   visibility: hidden;
-}
-#playerImage-container{
-  grid-column: 1;
+  grid-column: 1/3;
   grid-row: 3;
 }
 #computer-user {
+  display: flex;
+  flex-direction: row;
   visibility: hidden;
+  grid-column: 4 /span 5;
+  grid-row: 1;
 }
 #select-text {
   visibility: hidden;
