--- a/index.css
+++ b/index.css
@@ -19,6 +19,9 @@ header{
   grid-row: 3;
   margin: auto;
 }
+#search-image p {
+  text-align: center;
+}
 #play-game{
   scroll-behavior: smooth;
 }
@@ -26,6 +29,9 @@ header{
   grid-column: 2;
   grid-row: 4;
   margin: auto;
+}
+hr{
+  margin: 20px;
 }
 main {
   display: grid;
@@ -35,10 +41,60 @@ main {
   height: 99vh;
 }
 #action-box{
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  grid-template-rows: 1fr 3fr 3fr;
   grid-column: 2 / 5;
   grid-row: 4;
   visibility: hidden;
   text-align: center;
+}
+#action-text{
+  grid-column: 1 /span 2;
+}
+#move1-container{
+  margin: auto;
+}
+#move-1{
+  grid-column: 1;
+  grid-row: 2;
+  margin: 0;
+  padding: 3em 12em;
+  border: 5px solid black;
+  border-radius: 6px;
+}
+#move2-container{
+  margin: auto;
+}
+#move-2{
+  grid-column: 2;
+  grid-row: 2;
+  margin: 0;
+  padding: 3em 12em;
+  border: 5px solid black;
+  border-radius: 6px;
+}
+#move3-container{
+  margin: auto;
+}
+#move-3{
+  grid-column: 1;
+  grid-row: 3;
+  margin: 0;
+  padding: 3em 12em;
+  border: 5px solid black;
+  border-radius: 6px;
+}
+#move4-container{
+  margin: auto;
+}
+#move-4{
+  grid-column: 2;
+  grid-row: 3;
+  margin: 0;
+  padding: 3em 12em;
+  border: 5px solid black;
+  border-radius: 6px;
 }
 #player-user {
   display: flex;
@@ -47,12 +103,20 @@ main {
   grid-column: 1/3;
   grid-row: 3;
 }
+#playerImage-container img{
+  border: 2px solid black;
+  border-radius: 100%;
+}
 #computer-user {
   display: flex;
   flex-direction: row;
   visibility: hidden;
   grid-column: 4 /span 5;
   grid-row: 1;
+}
+#computerImage-container img{
+  border: 2px solid black;
+  border-radius: 100%;
 }
 #select-text {
   visibility: hidden;
