--- a/index.css
+++ b/index.css
@@ -1,12 +1,15 @@
 html {
   scroll-behavior: smooth;
 }
+body{
+  margin: 0;
+}
 header{
   display: grid;
   grid-template-columns: 1fr 3fr 1fr;
   grid-template-rows: repeat(5,1fr);
-  width: 99vw;
-  height: 99vh;
+  width: 100vw;
+  height: 100vh;
   background-color: lightcyan;
 }
 #logo {
@@ -22,13 +25,13 @@ header{
 #search-image p {
   text-align: center;
 }
-#play-game{
-  scroll-behavior: smooth;
-}
 #search-bar{
   grid-column: 2;
   grid-row: 4;
   margin: auto;
+}
+#select-text {
+  visibility: hidden;
 }
 hr{
   margin: 20px;
@@ -37,8 +40,69 @@ main {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   grid-template-rows: repeat(4,1fr);
-  width: 99vw;
-  height: 99vh;
+  width: 100vw;
+  height: 100vh;
+}
+
+#player-user {
+  margin: auto;
+  display: flex;
+  flex-direction: row-reverse;
+  visibility: hidden;
+  grid-column: 1/4;
+  grid-row: 3;
+}
+#playerUI-container{
+  margin: auto;
+  margin-left: 10px;
+  width: 20rem;
+  height: 9rem;
+  border: 2px solid grey;
+}
+#playerUI-container p {
+  margin: 1rem 1rem;
+  font-size: 20px;
+}
+#playerHP-text {
+  display: inline;
+}
+#playerHP{
+  display: inline-block;
+  margin: 0;
+}
+#playerImage-container img{
+  border: 2px solid black;
+  border-radius: 100%;
+}
+#computerHP-text{
+  display:inline;
+}
+#computerHP{
+  display: inline-block;
+  margin: 0px;
+}
+#computer-user {
+  margin: auto;
+  display: flex;
+  flex-direction: row;
+  visibility: hidden;
+  grid-column: 3 /span 5;
+  grid-row: 1;
+}
+#computerUI-container{
+  margin: auto;
+  margin-right: 10px;
+  width: 20rem;
+  height: 9rem;
+  border: 2px solid grey;
+}
+#computerUI-container p {
+  margin: 1rem 1rem;
+  font-size: 20px;
+}
+#computerImage-container img{
+  border: 2px solid black;
+  border-radius: 100%;
 }
 #action-box{
   display: grid;
@@ -96,28 +160,131 @@ main {
   border: 5px solid black;
   border-radius: 6px;
 }
-#player-user {
-  display: flex;
-  flex-direction: row-reverse;
-  visibility: hidden;
-  grid-column: 1/3;
-  grid-row: 3;
+
+
+@media only screen and (max-width: 768px) {
+  body{
+    position: absolute;
+  }
+  header{
+    grid-template-columns: 1fr 2fr 1fr;
+  }
+  main{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1r;
+    grid-template-rows: repeat(4,1fr);
+  }
+  #playerImage-container img{
+    width: 200px;
+  }
+  #computerImage-container img{
+    width: 200px;
+  }
+  #move-1{
+    padding: 2em 6em;
+  }
+  #move-2{
+    padding: 2em 6em;
+  }
+  #move-3{
+    padding: 2em 6em;
+  }
+  #move-4{
+    padding: 2em 6em;
+  }
 }
-#playerImage-container img{
-  border: 2px solid black;
-  border-radius: 100%;
+
+@media only screen and (max-width: 425px) {
+  body{
+    position: absolute;
+  }
+  header{
+    grid-template-columns: 1fr 2fr 1fr;
+  }
+  #player-form{
+    width: 15rem;
+  }
+  main{
+    grid-template-columns: 1fr 1fr 1r;
+    grid-template-rows: repeat(4,1fr);
+  }
+  #playerUI-container{
+    margin: auto;
+    margin-left: 10px;
+    width: 12rem;
+    height: 6rem;
+  }
+  #playerUI-container p {
+    margin: 6px;
+    font-size: 16px;
+  }
+  #playerImage-container img{
+    margin-left: 10px;
+    width: 150px;
+  }
+  #computer-user{
+    grid-column: 1 /span 5;
+  }
+  #computerUI-container{
+    margin: auto;
+    margin-right: 10px;
+    width: 12rem;
+    height: 6rem;
+  }
+  #computerUI-container p {
+    margin: 6px;
+    font-size: 16px;
+  }
+  #computerImage-container img{
+    width: 150px;
+  }
+  #move-1{
+    padding: 1em 2em;
+  }
+  #move-2{
+    padding: 1em 2em;
+  }
+  #move-3{
+    padding: 1em 2em;
+  }
+  #move-4{
+    padding: 1em 2em;
+  }
 }
-#computer-user {
-  display: flex;
-  flex-direction: row;
-  visibility: hidden;
-  grid-column: 4 /span 5;
-  grid-row: 1;
-}
-#computerImage-container img{
-  border: 2px solid black;
-  border-radius: 100%;
-}
-#select-text {
-  visibility: hidden;
+
+@media only screen and (max-width: 320px) {
+  body{
+    position: absolute;
+  }
+  #search-image img{
+    width: 18rem;
+  }
+  #playerUI-container{
+    width: 9rem;
+    height: 6rem;
+  }
+  #playerImage-container img{
+    width: 120px;
+    height: 105px;
+  }
+  #computerUI-container{
+    width: 9rem;
+    height: 6rem;
+  }
+  #computerImage-container img{
+    width: 120px;
+    height: 105px;
+  }
+  #move-1{
+    padding: 1rem 1rem;
+  }
+  #move-2{
+    padding: 1rem 1rem;
+  }
+  #move-3{
+    padding: 1rem 1rem;
+  }
+  #move-4{
+    padding: 1rem 1rem;
+  }
 }
