--- a/index.css
+++ b/index.css
@@ -136,6 +136,11 @@ main {
   border: 2px solid black;
   border-radius: 100%;
 }
+#moveused-text{
+  grid-column: 2 / 5;
+  grid-row: 2;
+  text-align: center;
+}
 #computerHP-text{
   display:inline;
 }
