--- a/index.css
+++ b/index.css
@@ -4,6 +4,7 @@ html {
 body{
   margin: 0;
 }
+
 header{
   display: grid;
   grid-template-columns: 1fr 3fr 1fr;
@@ -12,15 +13,18 @@ header{
   height: 95vh;
   background-color: lightcyan;
 }
-
-#logo {
+#picture-logo{
+  grid-column: 2;
+  grid-row: 1;
+  width:40vw;
+  height: 30vh;
+  margin: 1vh auto;
+  border-radius: 10px;
+}
+#search-prompt{
   grid-column: 2;
   grid-row: 2;
-  margin: auto;
-  padding:  50px 100px;
-  border: 4px solid black;
-  border-radius: 50%;
-  background: linear-gradient(to bottom, #ef3b36, #ffffff);
+  text-align: center;
 }
 #search-image{
   grid-column: 2;
@@ -28,7 +32,7 @@ header{
   margin: auto;
 }
 #search-image img{
-  margin: 0 auto;
+  margin: 1vh auto;
 }
 #search-image p {
   text-align: center;
@@ -44,12 +48,16 @@ header{
 hr{
   margin: 20px;
 }
+#move-explanation{
+  text-align:center;
+  background: linear-gradient(to right, #8e9eab, #eef2f3);
+}
 main {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   grid-template-rows: repeat(4,1fr);
   width: 100vw;
-  height: 90vh;
+  height: 85vh;
 }
 
 #player-user {
@@ -60,6 +68,7 @@ main {
   grid-column: 1/4;
   grid-row: 3;
 }
+
 #playerUI-container{
   margin: auto;
   margin-left: 10px;
@@ -87,6 +96,7 @@ main {
   grid-column: 2;
   grid-row: 2;
   margin: auto;
+  visibility: hidden;
 }
 /*************************** CITATION ***************************/
 /********* https://codepen.io/blakeworsley/pen/pbdqBK ***********/
@@ -235,9 +245,6 @@ main {
   border-radius: 6px;
 }
 @media only screen and (min-width: 2560px) {
-  #logo{
-    font-size: 30px;
-  }
   #search-image img{
     width: 400px;
   }
@@ -258,6 +265,9 @@ main {
     width: 10rem;
     height: 5rem;
   }
+  #move-explanation h3,h4 {
+    font-size: 24px;
+  }
   #playerImage-container img{
     margin-left: 38px;
     width: 200px;
@@ -272,6 +282,9 @@ main {
   #playerImage-container img{
   width: 350px;
   }
+  #play-game p{
+    font-size: 22px;
+  }
   #computerUI-container{
     width: 24rem;
     height: 12rem;
@@ -281,6 +294,9 @@ main {
   }
   #computerImage-container img{
   width: 350px;
+  }
+  #action-text {
+    font-size: 22px;
   }
   #move-1{
     padding: 2em 12em;
@@ -305,8 +321,31 @@ main {
     position: absolute;
     font-size: 16px;
   }
+  #picture-logo{
+    width:60vw;
+  }
   header{
     grid-template-columns: 1fr 2fr 1fr;
+  }
+  #search-image p {
+    font-size: 24px;
+  }
+  input[type="text"]{
+    font-size: 24px;
+  }
+  #player-search {
+    padding: 20px;
+    width: 20rem;
+  }
+  #get-player[type="submit"]{
+    font-size: 24px;
+  }
+  #get-player{
+    width: 8rem;
+    height: 4.5rem;
+  }
+  #move-explanation h4,h5 {
+    font-size: 24px;
   }
   main{
     display: grid;
@@ -321,23 +360,33 @@ main {
   #outer-container{
     grid-column: 1;
   }
+  #moveused-text p{
+    font-size: 24px;
+  }
   #computer-user{
     margin-right: 38px;
   }
   #computerImage-container img{
     width: 200px;
   }
+  #action-text{
+    font-size: 20px;
+  }
   #move-1{
-    padding: 2em 5em;
+    font-size: 20px;
+    padding: 2em 4em;
   }
   #move-2{
-    padding: 2em 5em;
+    font-size: 20px;
+    padding: 2em 4em;
   }
   #move-3{
-    padding: 2em 5em;
+    font-size: 20px;
+    padding: 2em 4em;
   }
   #move-4{
-    padding: 2em 5em;
+    font-size: 20px;
+    padding: 2em 4em;
   }
 }
 
@@ -345,11 +394,11 @@ main {
   body{
     position: absolute;
   }
+  #picture-logo{
+    width:60vw;
+  }
   header{
     grid-template-columns: 1fr 2fr 1fr;
-  }
-  #logo{
-    padding: 25px 50px;
   }
   main{
     display: grid;
@@ -369,6 +418,49 @@ main {
   }
   #outer-container{
     grid-column: 1;
+  }
+  .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 10vh;
+  }
+  
+  .ball {
+    height: 50px;
+    width: 50px;  
+    border-radius: 50px;
+    display: flex;
+    border: 5px black solid;
+    justify-content: center;
+    align-items: center;
+    background-image: linear-gradient(#7D1827 5%, red 49%, black 5%, white 49%, #CADBD1)
+  }
+  
+  .center, .center2 {
+    background: white;
+    border: 3px black solid;
+  }
+  .center {
+    width: 15px;
+    height: 15px;
+    border-radius: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: grey;
+  }
+  .center2 {
+    width: 12px;
+    height: 12px;
+    border-radius: 12px;
+    background-image: radial-gradient(white 60%, #757F7A)
+  }
+  
+  .ball:hover{
+    transition-duration: .2s;
+    transform: rotate(5deg);
+  /*   transform: rotate(0deg); */
   }
   #computer-user{
     grid-column: 1 /span 5;
@@ -401,13 +493,13 @@ main {
   body{
     position: absolute;
   }
+  #picture-logo{
+    width:60vw;
+  }
   header{
     grid-template-columns: 1fr 2fr 1fr;
   }
-  #logo{
-    font-size: 12px;
-    padding: 25px 50px;
-  }
+
   #search-image img{
     width: 200px;
   }
@@ -512,9 +604,8 @@ main {
   body{
     position: absolute;
   }
-  #logo{
-    font-size: 10px;
-    padding: 25px 50px;
+  #picture-logo{
+    width:60vw;
   }
   #search-image img{
     width: 200px;
@@ -613,9 +704,8 @@ main {
   body{
     position: absolute;
   }
-  #logo {
-    font-size: 10px;
-    padding: 12px 25px;
+  #picture-logo{
+    width:60vw;
   }
   #search-image img{
     width: 15rem;
@@ -628,7 +718,7 @@ main {
     height: 6rem;
   }
   #playerUI-container p{
-    margin: 3px;
+    margin: 2px;
   }
   #playerImage-container img{
     width: 100px;
@@ -688,7 +778,7 @@ main {
     height: 6rem;
   }
   #computerUI-container p{
-    margin: 3px;
+    margin: 2px;
   }
   #computerImage-container img{
     width: 100px;
