--- a/index.css
+++ b/index.css
@@ -148,10 +148,11 @@ main {
 /********* https://codepen.io/blakeworsley/pen/pbdqBK ***********/
 /*************************** CITATION ***************************/
 #moveused-text{
-  grid-column: 2 / 5;
+  grid-column: 3 / 5;
   grid-row: 2;
   text-align: center;
   margin: auto;
+  margin-left: 0;
 }
 
 #computerHP-text{
